[package]
name = "vmexec"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
base64ct = { version = "1.6.0", features = ["std", "alloc"] }
clap = { version = "4.5", features = ["wrap_help", "derive", "cargo"] }
clap_complete = "4.5.40"
clap_mangen = "0.2.24"
rustix = { version = "0.38.42", features = ["fs"] }
ssh-key = { version = "0.6.7", features = ["ed25519", "getrandom"] }
sysinfo = "0.33.0"
tempfile = "3.14.0"
tokio = { version = "1.42.0", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "local-time"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.24.0"
