[package]
name = "vmexec"
version = "0.1.4"
description = "Run a single command in a speedy virtual machine with zero-setup"
authors = ["Sven-Hendrik Haase <sven@svenstaro.org>"]
repository = "https://github.com/svenstaro/vmexec"
license = "MIT"
readme = "README.md"
keywords = ["vm", "virtual-machine"]
categories = ["command-line-utilities", "virtualization"]
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev.package.sha2]
opt-level = 3

[dependencies]
async-walkdir = "2.1.0"
base64ct = { version = "1.6.0", features = ["std", "alloc"] }
bytesize = "2.0.1"
clap = { version = "4.5", features = ["wrap_help", "derive", "cargo"] }
clap_complete = "4.5.40"
clap_mangen = "0.2.24"
color-eyre = "0.6.3"
dir-lock = "0.4.1"
directories = "6.0.0"
futures = { version = "0.3.31", default-features = false }
hex = "0.4.3"
indicatif = "0.17.11"
libc = { version = "0.2.169", default-features = false }
rattler_digest = { version = "1.0.5", features = ["tokio"] }
reqwest = "0.12.12"
russh = "0.51"
shell-escape = "0.1.5"
sysinfo = { version = "0.34", default-features = false, features = ["system"] }
tempfile = "3.17.0"
termion = "4.0.5"
tokio = { version = "1.42.0", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread"] }
tokio-fd = "0.3.0"
tokio-util = "0.7.13"
tokio-vsock = "0.7.0"
tracing = { version = "0.1.41", features = ["log"] }
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "local-time"] }
url = "2.5.4"
vhost = { version = "0.13.0", features = ["vhost-user-frontend"] }
which = "7.0.2"
whoami = { version = "1.5.2", default-features = false }

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.25"
